# cv-jax-pneumonia

./: .gitignore  main.py  pyproject.toml
src/: data_pipeline.py  losses.py
tests/: test_data_pipeline.py  test_losses.py
