[project]
name = "cv-jax-pneumonia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "flax>=0.12.3",
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.90",
    "optax>=0.2.6",
    "optuna>=4.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
]
